// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabHeader props should render with prop active 1`] = `
<ul
  active="false"
  class="relative w-full flex items-center justify-center font-hairline h-8"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render with prop background 1`] = `
<ul
  background="#fff"
  class="relative w-full flex items-center justify-center font-hairline h-8"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render with prop backgroundActive 1`] = `
<ul
  class="relative w-full flex items-center justify-center font-hairline h-8"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render with prop color 1`] = `
<ul
  class="relative w-full flex items-center justify-center font-hairline h-8"
  color="#fff"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render with prop colorActive 1`] = `
<ul
  class="relative w-full flex items-center justify-center font-hairline h-8"
  coloractive="#fff"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render with prop display 1`] = `
<ul
  class="relative w-full flex items-center justify-center font-hairline h-8"
  display="fixed"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render with prop index 1`] = `
<ul
  class="relative w-full flex items-center justify-center font-hairline h-8"
  index="5"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render with prop name 1`] = `
<ul
  class="relative w-full flex items-center justify-center font-hairline h-8"
  name="tab-name"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;

exports[`TabHeader props should render without props 1`] = `
<ul
  class="relative w-full flex items-center justify-center font-hairline h-8"
  role="tablist"
>
  <span
    class="block absolute pointer-events-none top-8 left-0 right-0 h-4 z-30"
  />
  
  
</ul>
`;
